--- a/redig-se.html
+++ b/redig-se.html
@@ -176,10 +176,11 @@
             gap: 8px;
             padding: 10px 20px;
             background: var(--accent);
-            color: #fff;
+            color: var(--bg-deep);
             font-size: 14px;
             font-weight: 600;
             border-radius: 10px;
+            white-space: nowrap;
             transition: transform 0.2s var(--ease-out), box-shadow 0.2s;
         }
 
