--- a/redig-se.html
+++ b/redig-se.html
@@ -176,7 +176,7 @@
             gap: 8px;
             padding: 10px 20px;
             background: var(--accent);
-            color: var(--bg-deep);
+            color: #000;
             font-size: 14px;
             font-weight: 600;
             border-radius: 10px;
