--- a/redig-se.html
+++ b/redig-se.html
@@ -176,9 +176,9 @@
             gap: 8px;
             padding: 10px 20px;
             background: var(--accent);
-            color: #000;
+            color: #fff;
             font-size: 14px;
-            font-weight: 600;
+            font-weight: 700;
             border-radius: 10px;
             white-space: nowrap;
             transition: transform 0.2s var(--ease-out), box-shadow 0.2s;
