--- a/redig-se.html
+++ b/redig-se.html
@@ -170,7 +170,7 @@
             color: var(--text-primary);
         }
 
-        .nav-cta {
+            .nav-links a.nav-cta {
             display: inline-flex;
             align-items: center;
             gap: 8px;
@@ -184,7 +184,8 @@
             transition: transform 0.2s var(--ease-out), box-shadow 0.2s;
         }
 
-        .nav-cta:hover {
+        .nav-links a.nav-cta:hover {
+            color: #fff;
             transform: translateY(-1px);
             box-shadow: 0 8px 24px rgba(255, 77, 0, 0.25);
         }
