--- a/redig-se.html
+++ b/redig-se.html
@@ -183,7 +183,11 @@
             white-space: nowrap;
             transition: transform 0.2s var(--ease-out), box-shadow 0.2s;
         }
-
+    .nav-links a.nav-cta svg {
+        width: 16px;
+        height: 16px;
+        flex-shrink: 0;
+    }
         .nav-links a.nav-cta:hover {
             color: #fff;
             transform: translateY(-1px);
